; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_socket.c_socket_enter_start_post.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_socket.c_socket_enter_start_post.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64, i32, i64, i64* }

@SOCKET_EXEC_START_POST = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [36 x i8] c"Failed to run 'start-post' task: %m\00", align 1
@SOCKET_START_POST = common dso_local global i32 0, align 4
@SOCKET_FAILURE_RESOURCES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*)* @socket_enter_start_post to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socket_enter_start_post(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %4 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %5 = call i32 @assert(%struct.TYPE_10__* %4)
  %6 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %7 = call i32 @socket_unwatch_control_pid(%struct.TYPE_10__* %6)
  %8 = load i64, i64* @SOCKET_EXEC_START_POST, align 8
  %9 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %9, i32 0, i32 0
  store i64 %8, i64* %10, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %11, i32 0, i32 3
  %13 = load i64*, i64** %12, align 8
  %14 = load i64, i64* @SOCKET_EXEC_START_POST, align 8
  %15 = getelementptr inbounds i64, i64* %13, i64 %14
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 2
  store i64 %16, i64* %18, align 8
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %42

23:                                               ; preds = %1
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 2
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %28, i32 0, i32 1
  %30 = call i32 @socket_spawn(%struct.TYPE_10__* %24, i64 %27, i32* %29)
  store i32 %30, i32* %3, align 4
  %31 = load i32, i32* %3, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %23
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %35 = call i32 @UNIT(%struct.TYPE_10__* %34)
  %36 = load i32, i32* %3, align 4
  %37 = call i32 @log_unit_warning_errno(i32 %35, i32 %36, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  br label %46

38:                                               ; preds = %23
  %39 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %40 = load i32, i32* @SOCKET_START_POST, align 4
  %41 = call i32 @socket_set_state(%struct.TYPE_10__* %39, i32 %40)
  br label %45

42:                                               ; preds = %1
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %44 = call i32 @socket_enter_listening(%struct.TYPE_10__* %43)
  br label %45

45:                                               ; preds = %42, %38
  br label %50

46:                                               ; preds = %33
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %48 = load i32, i32* @SOCKET_FAILURE_RESOURCES, align 4
  %49 = call i32 @socket_enter_stop_pre(%struct.TYPE_10__* %47, i32 %48)
  br label %50

50:                                               ; preds = %46, %45
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_10__*) #1

declare dso_local i32 @socket_unwatch_control_pid(%struct.TYPE_10__*) #1

declare dso_local i32 @socket_spawn(%struct.TYPE_10__*, i64, i32*) #1

declare dso_local i32 @log_unit_warning_errno(i32, i32, i8*) #1

declare dso_local i32 @UNIT(%struct.TYPE_10__*) #1

declare dso_local i32 @socket_set_state(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @socket_enter_listening(%struct.TYPE_10__*) #1

declare dso_local i32 @socket_enter_stop_pre(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
